# own-llm

./: README.md  main.py  pyproject.toml
gpt/: dataset.py
tokenizer/: tokenizer.py
