[project]
name = "own-llm"
version = "0.1.0"
description = "Build your own LLM [EDUCATIONAL]"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]

#[tool.uv.sources]
#torch = { index = "pytorch" }
#torchvision = { index = "pytorch" }
#
#[[tool.uv.index]]
#name = "pytorch"
#url = "https://download.pytorch.org/whl/rocm6.4"

[tool.mypy]
check_untyped_defs = true
